sfdx-source/OnlineProfile/main/default/objects/OutboundProfile__c/OutboundProfile__c.object-meta.xml
<CustomObject>
    <label>送信プロフィール</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{000000}</displayFormat>
        <label>送信プロフィール番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>