sfdx-source/OnlineProfile/main/default/objects/OutboundProfile__c/fields/CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>CreatedDate__c</fullName>
    <label>送信プロフィール作成日</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>