sfdx-source/OnlineProfile/main/default/objects/OutboundProfile__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>メール</label>
    <required>true</required>
    <type>Email</type>
</CustomField>