sfdx-source/OnlineProfile/main/default/objects/OutboundProfile__c/fields/ExchangeProfileUrl__c.field-meta.xml
<CustomField>
    <fullName>ExchangeProfileUrl__c</fullName>
    <label>プロフィール交換URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>