sfdx-source/OnlineProfile/main/default/objects/OutboundProfile__c/fields/ImageUrl__c.field-meta.xml
<CustomField>
    <fullName>ImageUrl__c</fullName>
    <label>画像URL</label>
    <type>Url</type>
</CustomField>