sfdx-source/OnlineProfile/main/default/objects/OutboundProfile__c/fields/InboundProfileNotificationFlg__c.field-meta.xml
<CustomField>
    <fullName>InboundProfileNotificationFlg__c</fullName>
    <defaultValue>true</defaultValue>
    <label>受信プロフィール通知要否</label>
    <type>Checkbox</type>
</CustomField>