sfdx-source/OnlineProfile/main/default/objects/OutboundProfile__c/fields/LastName__c.field-meta.xml
<CustomField>
    <fullName>LastName__c</fullName>
    <label>姓</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>