sfdx-source/OnlineProfile/main/default/objects/OutboundProfile__c/fields/MobilePhone__c.field-meta.xml
<CustomField>
    <fullName>MobilePhone__c</fullName>
    <label>携帯電話</label>
    <type>Phone</type>
</CustomField>