sfdx-source/OnlineProfile/main/default/objects/OutboundProfile__c/fields/MyProfile__c.field-meta.xml
<CustomField>
    <fullName>MyProfile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>マイプロフィール</label>
    <referenceTo>MyProfile__c</referenceTo>
    <relationshipLabel>送信プロフィール</relationshipLabel>
    <relationshipName>OutboundProfiles</relationshipName>
    <type>Lookup</type>
</CustomField>