sfdx-source/OnlineProfile/main/default/objects/OutboundProfile__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>都道府県</label>
    <length>80</length>
    <type>Text</type>
</CustomField>