sfdx-source/OnlineProfile/main/default/objects/OutboundProfile__c/fields/ViewCount__c.field-meta.xml
<CustomField>
    <fullName>ViewCount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>表示回数</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>