sfdx-source/OnlineProfile/main/default/objects/OutboundProfile__c/fields/ViewCountLimit__c.field-meta.xml
<CustomField>
    <fullName>ViewCountLimit__c</fullName>
    <defaultValue>300</defaultValue>
    <label>表示回数制限</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>