sfdx-source/OnlineProfile/main/default/objects/OutboundProfile__c/fields/ViewExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>ViewExpirationDate__c</fullName>
    <defaultValue>NOW()+14</defaultValue>
    <label>表示有効期限</label>
    <type>DateTime</type>
</CustomField>