sfdx-source/OnlineProfile/main/default/objects/OutboundProfile__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ExchangeProfileUrl__c</columns>
    <columns>Parent__c</columns>
    <columns>LastName__c</columns>
    <columns>FirstName__c</columns>
    <columns>Email__c</columns>
    <columns>ViewCountLimit__c</columns>
    <columns>ViewExpirationDate__c</columns>
    <columns>ViewCount__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>